# libembroidery

./: .gitignore  BUILD  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  LICENCE  LICENSE.md  Makefile  README.md  WORKSPACE  add_path.rc  api-start.h  api-stop.h  arduino-utility.cpp  array.c  bindings.java  bindings.md  bindings.swift  build.bat  build.sh  circle.py  cli.c  compound-file-common.h  compound-file-difat.c  compound-file-difat.h  compound-file-directory.c  compound-file-directory.h  compound-file-fat.c  compound-file-fat.h  compound-file-header.c  compound-file-header.h  compound-file.c  compound-file.h  compress.c  cpack.cmake  emb  emb-arc.c  emb-arc.h  emb-array.c  emb-circle.c  (+260 more)
.github/workflows/: build.yml  codeql-analysis.yml  docs.yml  pypi.yml  test.yml  website.yml  website_full.yml
EmbroiderBot/: EmbroiderBot.ino  LICENCE  Makefile  README.md  embroidery_embedded.c  embroidery_embedded.h  embroidery_embedded_geometry.c  other.c
asm/: Makefile  asm_embroidery.h  compress.S  data.S  designs.S  embroider_elf64.S  embroider_thumb.S  embroidery.S  embroidery.inc  formats.S  geometry.S  libembroidery.m4  libembroidery_arm.S  libembroidery_avr.S  libembroidery_data.asm  libembroidery_template.c  libembroidery_x86.S  libembroidery_x86.asm  pattern.S  script.S  testing.S
assets/: arc_polyester_colors.csv  arc_rayon_colors.csv  coats_and_clark_rayon_colors.csv  exquisite_polyester_colors.csv  fufu_polyester_colors.csv  fufu_rayon_colors.csv  hemingworth_polyester_colors.csv  hus_colors.csv  isacord_polyester_colors.csv  isafil_rayon_colors.csv  jef_colors.csv  madeira_polyester_colors.csv  madeira_rayon_colors.csv  marathon_polyester_colors.csv  marathon_rayon_colors.csv  metro_polyester_colors.csv  pantone_colors.csv  pcm_colors.csv  pec_colors.csv  robison_anton_colors.csv  robison_anton_rayon_colors.csv  shv_colors.csv  sigma_polyester_colors.csv  sulky_rayon_colors.csv  svg_colors.csv  thread_art_polyester_colors.csv  thread_art_rayon_colors.csv  threadelight_polyester_colors.csv
cmd/embroider/: embroider-main.c
demos/: logo-spirals.ppm
doc/: Makefile  embroider.1  libembroidery_v0.1_manual.tex  main.bib
doc/html/: annotated.html  classembroidery_1_1geometry_1_1Arc.html  classembroidery_1_1geometry_1_1DimLeader.html  classembroidery_1_1geometry_1_1Ellipse.html  classembroidery_1_1geometry_1_1Path.html  classembroidery_1_1geometry_1_1Point.html  classembroidery_1_1geometry_1_1Rotate.html  classembroidery_1_1image_1_1Image.html  classembroidery_1_1text_1_1TextSingle.html  classes.html  compress_8c.html  data_8c.html  dir_407e41cc2bc7c3130b0985640618dd7d.html  dir_4b37c35541aee0eec500a6f5b59dadfa.html  dir_4ffa0a4cb0db482ccd1a2d352354f289.html  dir_93c6ba7fb77bae0709fae89c9c13b44a.html  dir_c0fe8c1628e63d1e44fd8f07e8fda059.html  dir_dbfded582784846724308f9150bf5e72.html  embroidery__java_8h_source.html  files.html  formats_8c.html  functions.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  index.html  menudata.js  (+40 more)
docs/: 404.html  LICENSE.md  README.md  about.rst  build.sh  build_em_on_windows.sh  conf.py  contact.rst  documentation.rst  downloads.rst  em_user.rst  emrm.rst  index.html  index.rst  main.rst  mobile_user.rst  pet_user.rst  sitemap.xml
docs_src/: README.md  libembroidery_style.md
embedded/: Makefile  emb_elf64_test.asm  emb_thumb.asm  embroidery.inc
embroider/: embroider-main.c
experimental/: CMakeLists.txt  README.md  swig.i
experimental/csharp/binding/: .gitignore
experimental/csharp/converter/: libembroidery-convert.cs
experimental/delphi/converter/: libembroidery_convert.dpr
experimental/inkscape/: embroidermodder2_csv_comments.py
experimental/new/: embroider-main.c  libembroidery.c
images/: README.md
include/: embroidery.h
java/: EmbArc.java  EmbArcObject.java  EmbArray_.java  EmbBezier.java  EmbCircle.java  EmbCircleObject.java  EmbColor.java  EmbEllipse.java  EmbEllipseObject.java  EmbFormatList.java  EmbHoop.java  EmbImage.java  EmbLayer.java  EmbLine.java  EmbLineObject.java  EmbPathObject.java  EmbPattern.java  EmbPointObject.java  EmbPolygonObject.java  EmbPolylineObject.java  EmbRect.java  EmbRectObject.java  EmbSatinOutline.java  EmbSettings.java  EmbSplineObject.java  EmbStitch.java  EmbThread.java  EmbTime.java  EmbVector.java  L_system.java  README-java.md  SWIGTYPE_p_a_3__unsigned_char.java  SWIGTYPE_p_a_48__char.java  SWIGTYPE_p_double.java  SWIGTYPE_p_p_EmbPathObject_.java  SWIGTYPE_p_p_EmbPolygonObject_.java  SWIGTYPE_p_p_EmbPolylineObject_.java  SWIGTYPE_p_unsigned_char.java  embroidery.i  embroidery_wrap.c  (+4 more)
js/: README_emscripten.md
libembroidery/: __init__.py  arc.py  circle.py  dimleader.py  ellipse.py  formats.json  geometry.py  image.py  line.py  parametric.py  path.py  pattern.py  point.py  polygon.py  polyline.py  polylinearray.py  rect.py  text.py  textsingle.py  thread_colors.json  tools.py
libembroidery-convert/: Makefile  libembroidery-convert-main.c  libembroidery-convert.ilk  libembroidery-convert.pro  object_script.libembroidery-convert
libembroidery-test/: libembroidery-test-main.c  libembroidery_test_suite.sh
new/: CMakeLists.txt
python/: Makefile  README_python.md  embroidery.i  embroidery_wrap.c  extension.c  libembroidery.py  setup.py  test.py
src/: README.md  array.c  circle.c  compress.c  data.c  designs.c  emb_repl.c  embedded.md  embroider.c  embroider_cli.md  embroidery.c  embroidery.h  embroidery_internal.h  encoding.c  file.c  fill.c  format-data.c  formats.c  geometry.c  image.c  interface.c  internal.h  main.c  pattern.c  script.c  sew.c  test.c  testing.c  thread-color.c  thread_colors.c  unsorted.c
swift/: .gitmodules  LICENSE.md  README.md  README_swift.md  binding.swift  embroidery.swift  swift_binding.c
test/: BUILD  CMakeLists.txt  arc.c  circle.c  convert.c  ellipse.c  fill.c  format_table.c  formats.cc  render.c  test1.c  testing.c  tests.c  tests.h  thread_color.c  tree.c  vector.c
testing/: geom-arc.dxf  geom-circle.dxf
utility/: README.md  ino-event.cpp  ino-event.h  ino-file.h  ino-logging.h
(+1538 files in other folders)
